tests/neg/notfound-type-but-term.scala
object O

def test(): O = ??? // error
